--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -7,16 +7,19 @@ body,
   margin: 0;
   overflow: hidden;
 }
+
 .com-page {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
+
 .com-container {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
+
 .com-chart {
   width: 100%;
   height: 100%;
@@ -25,4 +28,8 @@ body,
 
 canvas {
   border-radius: 20px;
+}
+
+.com-container {
+  position: relative;
 }
